# factory

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml  tests.yml
src/factory/: __init__.py  factory.py  persister.py
tests/: conftest.py
tests/integration/: test_sqlalchemy.py  test_sqlmodel.py
tests/unit/factory/: test_create.py  test_defaults.py  test_make.py  test_only.py  test_with_attributes.py
tests/unit/fixtures/factories/: profile.py  user.py
tests/unit/fixtures/models/: profile.py  user.py
