[project]
name = "factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordi Urios", email = "jordi@kodilab.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
